--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Daniel S. & Team",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "dotenv": "^4.0.0",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "mongoose": "^4.9.10"
   }
 }
