--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
-    "mongoose": "^4.9.10"
+    "mongoose": "^4.9.10",
+    "slack": "^8.3.1"
   }
 }
