--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "mongoose": "^4.9.10",
+    "pug": "^2.0.0-rc.1",
     "slack": "^8.3.1"
   }
 }
