--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "mongoose": "^4.9.10",
     "pug": "^2.0.0-rc.1",
     "slack": "^8.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.7.0"
   }
 }
