--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Random Team Generator",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tunneldan": "lt --port 3000 -s temere"
   },
   "author": "Daniel S. & Team",
   "license": "ISC",
